--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>65536</title>
+  <title>75025</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,13 +16,13 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">65536</h1>
+      <h1 class="title">75025</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Is it possible to get to the <strong>65536 tile?</strong></p>
+    <p class="game-intro">Is it possible to get to the <strong>75025 tile?</strong></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -70,11 +70,11 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is <strong>not</strong> the official version of 2048. You can find the original version via <a href="http://git.io/2048">http://git.io/2048.</a>
+    <strong class="important">Note:</strong> This site is <strong>not</strong> the official version of 65536. You can find the original version via <a href="http://true65536.github.io/65536">http://git.io/65536.</a>
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a> Modified by <a href="https://github.io/thereal58">TheReal58.</a>
     </p>
   </div>
 
